# Example-Qt-ToDo-App

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: Deploy.cmake  Toolchain.cmake
include/: dbmanager.h  mainwindow.h
include/database/models/: list.h  task.h
include/widgets/: listwidget.h  taskwidget.h
include/windows/: mainwindow.h  settingswindow.h
ports/overlays/tinyorm/: portfile.cmake  remove-fuse-lld.patch
src/: dbmanager.cpp  main.cpp  mainwindow.cpp
src/widgets/: listwidget.cpp  taskwidget.cpp
src/windows/: mainwindow.cpp  settingswindow.cpp
translations/: translations.qrc
